# Multipath-CDMA

./: CMakeLists.txt  README.md  task1.sh  task2.sh  task3.sh  task4.sh  tasks.sh
data/: Xmatrix.txt
src/: bmpHeaderDataMerge.cpp  bmpHeaderDataSplit.cpp  main.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  utils.h  wrappers.cpp  wrappers.h
